--- a/package.json
+++ b/package.json
@@ -23,22 +23,11 @@
     "start": "NODE_ENV=production  node ./dist/server.generated.js"
   },
   "engines": {
-    "node": "8.11.1",
-    "npm": "5.8.0"
+    "node": "10.14.1",
+    "npm": "6.4.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "file-loader": "1.1.11",
-    "nodemon": "^1.18.9",
-    "webpack": "4.6.0",
-    "webpack-cli": "2.0.15",
-    "webpack-dev-middleware": "3.1.3",
-    "webpack-hot-middleware": "2.22.1",
-    "webpack-node-externals": "1.7.2"
+   
   },
   "dependencies": {
     "@material-ui/core": "^3.9.0",
@@ -64,6 +53,18 @@
     "react-router": "4.2.0",
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.2.2",
-    "screenfull": "3.3.2"
+    "screenfull": "3.3.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "file-loader": "1.1.11",
+    "nodemon": "^1.18.9",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.15",
+    "webpack-dev-middleware": "3.1.3",
+    "webpack-hot-middleware": "2.22.1",
+    "webpack-node-externals": "1.7.2"
   }
 }
